# astd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  codeql.yml
std/: CMakeLists.txt
std/algorithm/: scriptstd_algorithm.cpp  scriptstd_algorithm.h
std/chrono/: scriptstd_chrono.cpp  scriptstd_chrono.h  scriptstd_chrono_os.cpp  scriptstd_chrono_os.h
std/coroutines/: scriptstd_coroutines.cpp  scriptstd_coroutines.h
std/format/: scriptstd_format.cpp  scriptstd_format.h
std/format/fmt/: format.cc  printf.h
std/memory/: scriptstd_memory.cpp  scriptstd_memory.h
std/print/: scriptstd_print.h
std/ratio/: scriptstd_ratio.cpp  scriptstd_ratio.h  scriptstd_ratio.impl.hpp
std/scan/scn/: error.h  scan.h
std/sdk/include/asdk/: asdk.hpp
tests/: chrono_tests.cpp  run_tests.bat  run_tests.sh
tests/doctest/: doctest.h
tests/service/: testsuit.h
tests/service/resources/: chrono_script.as  co_script.as  print_and_math_script.as  script.as
